# Chrobry

./: Cargo.toml  README.md
chrobry-cli/: Cargo.toml
chrobry-cli/src/: main.rs
chrobry-core/: Cargo.toml
chrobry-core/src/: ast.rs  grammar.pest  lib.rs  parser.rs  processor.rs  tests.rs
resources/: cpp.chrobry  cpp.chrobry.h  json.chrobry  json.chrobry.json  replace.chrobry  replace.chrobry.txt
