[package]
name = "chrobry-cli"
version = "1.1.0"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2018"
description = "Chrobry CLI app"
license = "MIT"
homepage = "https://github.com/PsichiX/chrobry"
repository = "https://github.com/PsichiX/chrobry"
documentation = "https://docs.rs/chrobry-cli"
readme = "../README.md"
maintenance = { status = "actively-developed" }

[[bin]]
name = "chrobry"
path = "./src/main.rs"

[dependencies]
clap = "2.33"
chrobry-core = { version = "1", path = "../chrobry-core" }
